@@ -1,3 +1,4 @@
+10-may-2010 - adelikat - Loadstate while in record mode update input display
 10-may-2010 - ugetab - Win32 - Added hotkey options for the cheat dialog buttons Equal, Not Equal, Greater Than, and Less Than.
 10-may-2010 - ugetab - Added gui.getpixel() which gets any gui.pixel() set pixel colors, and possibly other functions. Added emu.getscreenpixel() which gets the RGB and Palette of any pixel on the screen.
 08-may-2010 - ugetab - Added savestate.object() which is savestate.create() with intuitive numbering under windows
